/* autodoc recipe: cat $^ | grep -v "/\_*"| grep -v "\*_/"  > $@      << remove _ in the greps   */
/* lines starting with / * or * / will be pruned. The result is considered to be a valid markdown */
/*
# CI server protocol
This document contains the full CI Server protocol.

*/

    package format ;

/*


## messages

jobid Holds the identity for a job:
*/

	message jobid {
		required string    name    = 1;
		required string    remote  = 2;
		required string    branch  = 3;
	}
/*

a Job message contains the job identity, and information about the two executions.
*/

	message job {
		required jobid    id    = 1;
		required execution refresh = 4;
		required execution build   = 5;
	}

/*
execution contains All information collected about one execution (refresh, or build)
*/

	message execution {
		required string version = 1 ;  // sha1, hex encoded, containing the sha1 of all subrepositories sha1
		required int64  start   = 2 ;  // unixtimestamp of when the execution begun
		required int64  end     = 3 ;  // unixtimestamp of when the execution ended
		required int32  errcode = 4 ;  // execution error code
		optional string result  = 5 ;  // console output (refresh or make)
	}

/* 

# Persistence

the CI Server uses protobuf to persist data locally. It persists this "server" message.
*/

	message server {
		repeated job jobs = 1;
	}

/*

# Protocol

the CI Server protocol is based on http request/response where request/response
messages are passed in the body of the http message.

A specific application/x-protobuf mime type is used.

request is a Union type for multiple specific requests.
*/

	message request {
		optional listRequest    list    = 2 ; // request a list of jobs 
		optional logRequest     log     = 3 ; // request a single job
		optional addRequest     add     = 4 ; // request to add a job
		optional removeRequest  remove  = 5 ; // request to remove a job
	}

/*
response is a "Union" type for multiple specific responses.

Nevertheless it can always return an error.
*/

	message response {
		optional string       error = 1 ; // response error, if any.
		optional listResponse list  = 2 ; // response for a list Request
		optional logResponse  log   = 3 ; // response for a log request
		//optional addResponse  add = 4 ;  //  there is no response for an Add (no error is enough)
		//optional removeResponse  add = 4 ;  //  there is no response for a remove (no error is enough)
	}

/*
listRequest to get the listReponse. options are given to not retrieve the whole response object
*/

	message listRequest {
		optional bool refreshResult = 1 ; // true to include also result (output)
		optional bool buildResult   = 2 ; // true to include also result (output)
	}

	message listResponse {
		repeated job jobs   = 1 ; // all jobs requested
	}

/*
logRequest to get the logReponse for a given job identfied by its jobname.
*/


	message logRequest {
		required string jobname = 1 ; // the job name
	}
	message logResponse{
		required job job = 1 ; // the job requested
	}

/*
addRequest to add a job. The full jobid is required.
A response with (or without) Error is returned. There is no need for a specific message.
*/

	message addRequest {
		required jobid id = 1 ; // the job identity to be created.
	}
/*
removeRequest to remove a job by its name.
No specific respnse.
*/

	message removeRequest {
		required string jobname = 1 ; // the job unique name to remove
	}


/*

*/